another attempt at fixing scroll on iOS, retina, & non-retina

--- a/public/styleguide/css/styleguide.scss
+++ b/public/styleguide/css/styleguide.scss
@@ -105,14 +105,6 @@ $animate-quick: 0.2s;
     $PATTERN LAB INTERFACE 
 \*------------------------------------*/
 
-html, body {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	-webkit-backface-visibility: visible;
-}
-
 #patternlab-html, #patternlab-body {
 	margin: 0;
 	padding: 0;
@@ -497,10 +489,16 @@ html, body {
 }
 
 #sg-viewport {
-  border: 0;
-  margin: 0 0 -5px 0;
-  height: 100%;
-  width: 100%; 
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 
   &.hay-mode {
 		-webkit-transition: all 40s linear;
@@ -532,7 +530,8 @@ html, body {
 }
 
 #sg-gen-container {
-	height: 100%; 
+	height: 100%;
+	position: relative;
 	text-align: center; 
 	margin: 0 auto;
 	-webkit-overflow-scrolling: touch;
@@ -548,7 +547,7 @@ html, body {
 }
 
 #sg-rightpull-container {
-	width: 10px; 
+	width: 14px; 
 	float: right; 
 	margin: 0; 
 	height: 100%; 
@@ -557,7 +556,7 @@ html, body {
 
 #sg-rightpull {
 	margin: 0; 
-	width: 10px; 
+	width: 100%; 
 	height: 100%; 
 	background: #999;
 	-webkit-transition: background $animate-quick ease-out;
